--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,39 @@
     margin: 0px 0px 0px 0px;
 }
 
+#container-journals {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+
+    padding: 0 10vw 0 10vw;
+}
+
+
+.journal-title {
+    border-style: ridge;
+    border-color: #000;
+    border-radius: 2pt;
+    position: relative;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 0px;
+    padding-right: 0px;
+    top:50%;
+    left: 0%;
+}
+
+.journal-img, .journal-video {
+    padding: 5px 5px 5px 5x;
+    margin: auto;
+    display: block;
+    min-width: 20vw;
+    max-width: 30vw;
+}
+
 body {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -69,6 +102,25 @@ a:hover {
     font-size: 1.1rem;
 }
 
+hr {
+    width: 80%;
+    border-style:double;
+    border-width: 2px;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+}
+
+p {
+    text-indent: 1pc;
+}
+
+.journal-list > li {
+    margin-bottom: 2em;
+}
+
+.journal-list > li:last-of-type {
+    margin-bottom: none;
+}
 
 footer {
     width: 100%;
@@ -82,7 +134,5 @@ footer {
     -webkit-clip-path: polygon(0% 0%, 100% 30%, 100% 100%, 0% 100%);
     clip-path: polygon(0% 0%, 100% 30%, 100% 100%, 0% 100%);
 }
-
-
 
 
