--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
 #page_nav {
     position:sticky;
-    background-color:skyblue;
+    background-color:skyblue; /* I needed a comment */
     width: 100%;
     height: auto;
     top: 0px;
